--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,23 @@
+*{
+    margin: 0;
+    box-sizing: 0;
+}
+
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: deeppink;
+    color: black;
+    font-size: 16px;
+}
+
+#header{
+    width: 70%;
+    padding: 1rem;
+    text-align: left;
+    border: 1px solid gray;  
+    margin: 0 auto;
+}
+
+#header h1{
+    font-size: 70px;
 }
