--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,12 +12,27 @@ body{
 
 #header{
     width: 70%;
-    padding: 1rem;
     text-align: left;
     border: 1px solid gray;  
     margin: 0 auto;
 }
 
-#header h1{
-    font-size: 70px;
+.header__cabecera{    
+    background-color: #100477;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    margin: 0;
+    padding: 0.5rem;
+    -webkit-box-shadow: 6px 36px 43px 0px rgba (0,0,0,0.75);
+    -moz-box-shadow: 6px 36px 43px 0px rgba (0,0,0,0.75);
+    box-shadow: 6px 36px 43px 0px rgba (0,0,0,0.75);
+}
+
+
+.header__cabecera--subtitulo{
+    padding: 0 0 0 1rem;
+    font-weight: normal;
+    margin-right: 10px;
+    font-size: 0.6rem;
 }
