--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 
 body{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: black;
     font-size: 16px;
 }
