--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: red;
     font-size: 16px;
 }
 
