--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,11 @@
 *{
     margin: 0;
-    box-sizing: 0;
 }
 
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: blueviolet;
     font-size: 16px;
 }
 
